# learning_agentic_AI

00_uv/00_hello_world/: pyproject.toml
00_uv/00_hello_world/src/00_hello_world/: __init__.py
00_uv/01_blog_flow_uv/src/blog_flow_uv/crews/writer_crew/config/: agents.yaml
01_crewai/00_hello_crewai/: README.md  poem.txt
01_crewai/01_blog_flow_uv/src/blog_flow_uv/: __init__.py
01_crewai/01_blog_flow_uv/src/blog_flow_uv/crews/research_crew/: research_crew.py
01_crewai/01_blog_flow_uv/src/blog_flow_uv/crews/research_crew/config/: tasks.yaml
01_crewai/blog_flow_uv/: pyproject.toml
01_crewai/blog_flow_uv/src/blog_flow_uv/: blog.md  main.py
01_crewai/blog_flow_uv/src/blog_flow_uv/crews/research_crew/config/: agents.yaml
01_crewai/blog_flow_uv/src/blog_flow_uv/crews/writer_crew/: writer_crew.py
01_crewai/blog_flow_uv/src/blog_flow_uv/crews/writer_crew/config/: tasks.yaml
01_lite_llm/uv-proj/src/uv_proj/: __init__.py  llms.py
02_crewai/00_hello_crewai/: pyproject.toml
02_crewai/00_hello_crewai/src/proj_isb/: main.py
06_crew_ai/01_litellm/uv-proj/: pyproject.toml
06_crew_ai/01_litellm/uv-proj/src/uv_proj/: main.py
