[project]
name = "00-hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Harry5174", email = "harisjaved010@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
00-hello-world = "00_hello_world:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
