[project]
name = "blog-flow-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Harry5174", email = "harisjaved010@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]>=0.102.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
blog = "blog_flow_uv.main:blog_kickoff1"
