[project]
name = "uv-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Harry5174", email = "harisjaved010@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.59.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
uv-proj = "uv_proj.main:greetings"
gemini = "uv_proj.llms:gemini2"
